--- a/traffic-light/templates/includes/inc__coworkers.html
+++ b/traffic-light/templates/includes/inc__coworkers.html
@@ -1,25 +1,33 @@
-{% for employee in employees %}
-    <div class="accordion">
-        <h2>
+{% for sub in init_data %}
+    <h2>
+        {% if sub.get_object_list.all|length %}
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#{{ employee.position }}{{ forloop.counter }}" aria-expanded="false">
-                <span class="text-muted">должность: </span>{{ employee.position }}&emsp;
-                <b>{{ employee.get_full_name }}</b>&emsp;
+                    data-bs-target="#{{ sub.username }}{{ forloop.counter }}" aria-expanded="false">
+                <span class="text-muted">должность: </span>{{ sub.position }}&emsp;
+                <b>{{ sub.get_full_name }}</b>&emsp;
                 <span class="text-muted">дата приёма на работу: </span>
-                {{ employee.hiring_date|date:"d-M-y" }}&emsp;
-                <span class="text-muted">уровень зп:</span> {{ employee.salary }}
+                {{ sub.hiring_date|date:"d-M-y" }}&emsp;
+                <span class="text-muted">уровень зп:</span> {{ sub.salary }}
             </button>
-        </h2>
-
-        {% if employee.coworkers.all|length %}
-            <div class="mx-5">
-                <div id="{{ employee.position }}{{ forloop.counter }}" class="accordion-collapse collapse">
-                    <div class="accordion-body">
-                        {% include 'includes/inc__coworkers.html' with employees=employee.coworkers.all %}
-                    </div>
-                </div>
+        {% else %}
+            <div class="form-control">
+                <span class="text-muted">должность: </span>{{ sub.position }}&emsp;
+                <b>{{ sub.get_full_name }}</b>&emsp;
+                <span class="text-muted">дата приёма на работу: </span>
+                {{ sub.hiring_date|date:"d-M-y" }}&emsp;
+                <span class="text-muted">уровень зп:</span> {{ sub.salary }}
             </div>
         {% endif %}
-    </div>
+    </h2>
+
+    {% if sub.get_object_list.all|length %}
+        <div class="mx-5">
+            <div id="{{ sub.username }}{{ forloop.counter }}" class="accordion-collapse collapse">
+                <div class="accordion-body">
+                    {% include 'includes/inc__coworkers.html' with init_data=sub.get_object_list %}
+                </div>
+            </div>
+        </div>
+    {% endif %}
 
 {% endfor %}
