--- a/employee-structure/templates/includes/inc__coworkers.html
+++ b/employee-structure/templates/includes/inc__coworkers.html
@@ -2,7 +2,7 @@
     <div class="accordion">
         <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#{{ employee.position }}{{ forloop.counter }}" aria-expanded="false">
+                    data-bs-target="#{{ employee.username }}{{ forloop.counter }}" aria-expanded="false">
                 <span class="text-muted">должность: </span>{{ employee.position }}&emsp;
                 <b>{{ employee.get_full_name }}</b>&emsp;
                 <span class="text-muted">дата приёма на работу: </span>
@@ -13,7 +13,7 @@
 
 {#        {% if employee.coworkers.all|length %}#}
 {#            <div class="mx-5">#}
-{#                <div id="{{ employee.position }}{{ forloop.counter }}" class="accordion-collapse collapse">#}
+{#                <div id="{{ employee.username }}{{ forloop.counter }}" class="accordion-collapse collapse">#}
 {#                    <div class="accordion-body">#}
 {#                        {% include 'includes/inc__coworkers.html' with employees=employee.coworkers.all %}#}
 {#                    </div>#}
