--- a/traffic-light/client/src/app/components/index/index.component.html
+++ b/traffic-light/client/src/app/components/index/index.component.html
@@ -3,12 +3,12 @@
 
   <div class="accordion" *ngFor="let sub of subDivs">
 
-    <button class="accordion-button collapsed" type="button" (click)="mainService.addItemInSelectedList(sub.id)">
+    <button class="accordion-button collapsed" type="button" (click)="mainService.changeItemInSelectedList(sub.id)">
       <span class="text-muted">Подразделение:&nbsp;</span> <b>{{ sub.name }}</b>&emsp;
     </button>
     <div class="mx-2 accordion-collapse"
          *ngIf="mainService.checkItemInSelectedItems(sub.id) && sub.owners">
-      <div *ngFor="let item of sub.owners" class="accordion-body" (click)="mainService.addItemInSelectedList(item.id)">
+      <div *ngFor="let item of sub.owners" class="accordion-body" (click)="mainService.changeItemInSelectedList(item.id)">
         <b>{{item.username}}</b> <span class="text-muted">Зарплата сотрудника: </span>{{item.salary}}
         <app-widget *ngIf="mainService.checkItemInSelectedItems(item.id)" [userId]="item.id"></app-widget>
       </div>
