--- a/traffic-light/client/src/app/components/widget/widget.component.html
+++ b/traffic-light/client/src/app/components/widget/widget.component.html
@@ -1,5 +1,5 @@
-<div class="mx-2 accordion-collapse">
-  <div *ngFor="let obj of data" class="accordion-body" (click)="mainService.addItemInSelectedList(obj.id)">
+<div class="mx-2 accordion-collapse form-control">
+  <div *ngFor="let obj of data" class="accordion-body" (click)="mainService.changeItemInSelectedList(obj.id)">
     <b>{{obj.username}}</b> <span class="text-muted">Зарплата сотрудника: </span>{{obj.salary}}
     <app-widget *ngIf="mainService.checkItemInSelectedItems(obj.id)" [userId]="obj.id"></app-widget>
   </div>
